# haskell-nix-c2hs

./: .gitignore  cabal.project  default.nix  haskell-nix-c2hs.cabal  hie.yaml  shell.nix
nix/: hie.nix  sources.json
