cabal-version:       >=1.10

name:                haskell-nix-c2hs
version:             0.1.0.0
build-type:          Simple

executable haskell-nix-c2hs
  main-is:             Main.hs
  other-modules:       FFI
  build-depends:       base >=4.13 && <4.14
  build-tool-depends:  c2hs:c2hs
  default-language:    Haskell2010
